--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,5 @@ six==1.17.0
 tzdata==2025.2
 Werkzeug==3.1.3
 gunicorn==22.0.0
-opencv-python==4.8.1.78
-Pillow==10.0.1
+opencv-python-headless
+Pillow
